--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="img/gus2.svg" alt="gus">
+    <img src="img/gus3.svg" alt="gus">
+    <a href="index.html">Main page</a>
 </body>
 </html>
