--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+
     <h1>Hello World</h1>
     <p>My name Liana</p>
+    <a href="gallery.html">Gallery</a>
+    
+
 </body>
 </html>
