--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="index.html">Main page</a>
+    <h1>My favorite Banderogus</h1>
     <img src="img/gus2.svg" alt="gus">
     <img src="img/gus3.svg" alt="gus">
-    <a href="index.html">Main page</a>
+   
+
 </body>
 </html>
