add new information

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Hello World</h1>
     <p>My name Liana</p>
     <a href="gallery.html">Gallery</a>
+    <h2>About myself</h2>
+    <p>date of birth 15 July 1989</p>
     
 
 </body>
